config-root/namespaces/jx-staging/jx3-golang-demo/jx3-golang-demo-jx3-golang-demo-deploy.yaml
# Source: jx3-golang-demo/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jx3-golang-demo-jx3-golang-demo
  labels:
    draft: draft-app
    chart: "jx3-golang-demo-0.0.2"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: jx3-golang-demo-jx3-golang-demo
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: jx3-golang-demo-jx3-golang-demo
    spec:
      serviceAccountName: jx3-golang-demo-jx3-golang-demo
      containers:
        - name: jx3-golang-demo
          image: "gcr.io/jenkins-x-labs-bdd/jx3-golang-demo:0.0.2"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
